@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.9924 TBR
+    - added wxTimerRunner
 
 0.9923 Mon Mar 31 2014
     - added wxWindow::InitDialog
